<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/firstNumber" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:importantForAutofill="no"
            tools:targetApi="o" android:hint="@string/first_number"/>
    <EditText
            android:layout_width="210dp"
            android:layout_height="45dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/secondNumber"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="95dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:autofillHints="" tools:targetApi="o"
            android:hint="@string/second_number"/>
    <TextView
            android:text="@string/result"
            android:layout_width="210dp"
            android:layout_height="45dp"
            android:id="@+id/resultText" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="161dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:gravity="center_vertical"
            android:textSize="24sp"/>
    <RadioGroup
            android:layout_width="207dp"
            android:layout_height="128dp"
            app:layout_constrainedHeight="false"
            app:layout_constrainedWidth="false"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="228dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="17dp" android:layout_marginStart="17dp" android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/additionRadioButton" android:layout_weight="1"
                android:checked="true"/>
        <RadioButton
                android:text="@string/subtraction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/subtractionRadioButton"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/multiplication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/multiplicationRadioButton"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/division"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/divisionRadioButton" android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/calculateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calculateButton"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="392dp" android:onClick="calculate"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="152dp"
            android:layout_marginStart="152dp" android:layout_marginEnd="157dp" android:layout_marginRight="157dp"
            app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>